# algoritmos-y-programacion-III

./: CMakeLists.txt  README.md  main.c  parImpar.h
TP Final/: Alumno.h  Carrera.h  Consignas.txt  Interfaz.h  Lista.h  Materia.h  README.txt  interfazUsuario.h
TP1/: caracteres.h  datos.h  maximo.h  menu.h  minimo.h  parImpar.h  promedio.h
TP2/: estructuras.h  prueba.h
TP3/: ListaEnlazadaSimple.c  listaEnlazadaSimple.h
