cmake_minimum_required(VERSION 3.17)
project(CursadaAYPIII C)

set(CMAKE_C_STANDARD 99)

add_executable(CursadaAYPIII main.c TP1/parImpar.h TP1/promedio.h TP1/maximo.h TP1/minimo.h TP1/caracteres.h TP1/menu.h TP1/datos.h TP2/estructuras.h TP3/listaEnlazadaSimple.h "TP Final/Interfaz.h" "TP Final/Lista.h" "TP Final/Alumno.h" "TP Final/Materia.h")